--- a/_posts/2019-07-01-the-us-narrative-today.html
+++ b/_posts/2019-07-01-the-us-narrative-today.html
@@ -2661,107 +2661,107 @@ stories:
   domain: http://www.chinookobserver.com/
   link: https://www.chinookobserver.com/news/national/elite-military-vets-help-splyce-get-ahead/video_36d5097c-cf04-5907-b183-a18508564269.html
 images:
-- name: los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-circuit-4.jpg
-- name: stories-catacombs-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-catacombs-blue-circuit-3.jpg
-- name: oldbarn-oldbarn-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-aqua.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-rainbow-festival.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-rainbow-festival.png
-- name: downtown-fredericksburg-downtown-fredericksburg-nazi-poster.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-nazi-poster.JPG
-- name: ellis-island-ellis-island-room-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-diego-rivera1.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-umberto-bocc.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-umberto-bocc.JPG
-- name: downtown-fredericksburg-downtown-fredericksburg-colorful-dream.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colorful-dream.JPG
-- name: statue-of-liberty-front-view-statueofliberty-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-granite.jpg
-- name: crow-crow-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-three.jpg
-- name: lincoln-memorial-lincolnmemorial-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-ww2-dresden.jpg
-- name: machine-road-machine-road-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-nazi-poster.jpg
-- name: aws-s3-stories-new-80-87-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-80-87-800-500-0-max-0--1--1.jpg
-- name: server-cloud-server-racks-clouds-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-yellow-collage.jpg
-- name: white-house-lawn-white-house-lawn-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-neo-instinct.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-deep-connections.jpg
-- name: beach-rocks-beach-rocks-currents-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-satan-red.jpg
-- name: christianity-christianity-under-construction-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-matrix.jpg
-- name: containership-bw-storytelling-colored-circuits.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling-colored-circuits.png
-- name: flower-barbed-wire-flower-barbed-wire-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-smoking-cigarette.jpg
-- name: server-cloud-server-racks-door-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-monet-one.jpg
-- name: statue-of-liberty-front-view-statueofliberty-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-kand-two.jpg
-- name: supreme-court-supremecourt-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-nazi-poster.jpg
-- name: old-house-oldhouse-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-yellow-collage.jpg
-- name: san-francisco-street-view-san-francisco-street-view-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-kand-two.jpg
-- name: trucksilo-trucksilo-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-alien-goggles.jpg
-- name: stories-new-32-119-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-32-119-800-500-0-max-0--1--1.jpg
-- name: window-window-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-diego-rivera1.jpg
-- name: razorwire-DSC-0080-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-yellow-collage.jpg
-- name: store-on-corner-oldcabin-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-gan-vogh.jpg
-- name: dc-statue-dcstatue-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-bright-sand.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-ww2-dresden.jpg
-- name: razorwire-DSC-0080-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-pablo-blue.jpg
-- name: walled-garden-walled-garden-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-really-hot.jpg
-- name: blossombar-crafty-painting-file-00-00-50-58.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-58.jpg
-- name: bordercrossing-bordercrossing-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-creativity.jpg
-- name: oldbarn-oldbarn-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-plentiful.jpg
-- name: hollywood-building-hollywood-building-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-constitution.jpg
-- name: death-valley-death-valley-national-park-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-colorful-blocks.jpg
-- name: oldbarn-oldbarn-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-green-zuma.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-atari-asteroids.jpg
-- name: downtown-los-angeles-downtown-la-dark-soul.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dark-soul.JPG
-- name: yosemite-yosemite-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-nazi-poster.jpg
-- name: old-door-lock-old-door-lock-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-colorful-blocks.jpg
-- name: beach-clouds-lifeguard-beachclouds-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-dark-soul.jpg
-- name: crow_bright_sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_bright_sand.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-clean-view.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-clean-view.JPG
-- name: cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-internet-numbers.jpg
-- name: rain-princess-IMG_8312.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8312.jpg
-- name: containership-containership-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dry-skin.jpg
-- name: status-berlin-status-berlin-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-propaganda-leaflets.jpg
+- name: bluelake-clean-view-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-clean-view-file-00-00-38-67.jpg
+- name: copper-circuit-DSC_0062.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0062.jpg
+- name: gears-4882162452-fa3126b38d-b-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-emily-carr.jpg
+- name: powerlines-power-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-constitution.jpg
+- name: fence-mexico-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-smoking-cigarette.jpg
+- name: dragon_close-up-nazi-invasion.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-nazi-invasion.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-purple-pond.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-purple-pond.JPG
+- name: bluelake-oily-mcoilface-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-oily-mcoilface-file-00-01-17-38.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-rain.jpg
+- name: oldroad-old-road-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-colorful-dream.jpg
+- name: beach-clouds-lifeguard-beachclouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds.jpg
+- name: locked-up-steam-lock-up-steam-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-wols.jpg
+- name: stories-statue-face-open-mouth-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-colorful-blocks.png
+- name: fast-lights-freeway-redes-fast-flux-623x425-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-blue-circuit.jpg
+- name: gears-4882162452-fa3126b38d-b-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dark-dali.jpg
+- name: meadowbutterfly-meadow-butterfly-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-sand-paper.jpg
+- name: locked-up-steam-lock-up-steam-china-prop.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-china-prop.jpg
+- name: locked-up-steam-lock-up-steam-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-sand-paper.jpg
+- name: sand-hand-sand-hand-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-electricity.jpg
+- name: berlinwall-DSC-0084-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-light-dali.jpg
+- name: stories-fence-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-fence-dark-dali.jpg
+- name: carry-load-carryload-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-constitution.jpg
+- name: berlinwall2-berlinwall-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-diego-rivera1.jpg
+- name: beach-rocks-beach-rocks-currents-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-jap-dys-1.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-cinnamon-rolls.jpg
+- name: supreme-court-supremecourt-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-ww2-color.jpg
+- name: capital-battle-capitolbattle-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purp-paper.jpg
+- name: aws-s3-canyon-canyon-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still-1200.jpg
+- name: yosemite-yosemite-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-emily-carr.jpg
+- name: meadowbutterfly-meadow-butterfly-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-nazi-poster.jpg
+- name: old-door-lock-old-door-lock-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-marcel-duchamp.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-plentiful.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-plentiful.JPG
+- name: oldhotel-oldhotel-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-green-zuma.jpg
+- name: wind-mills-windmills-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-far-away.jpg
+- name: liberty-back-statue-liberty-back-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-dark-soul.jpg
+- name: aws-s3-methuselah-methuselah-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-methuselah-methuselah-still-600.jpg
+- name: stories-adam-smith-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-adam-smith-dali-three.jpg
+- name: nyc-flag-nycflag-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-space-pizza.jpg
+- name: downtown-trucksilo-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-smooth-ride.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-green-zuma.jpg
+- name: oldbarn-oldbarn-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-matrix.jpg
+- name: stories-new-16-38-600-500-0-max-1-1-2-0.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-16-38-600-500-0-max-1-1-2-0.jpg
+- name: dragon-desert-desert-dragon-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-clean-view.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-bright-sand.jpg
+- name: oldbarn-oldbarn-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dali-two.jpg
+- name: legal-statue-legalstatue-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-crabapple.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-aqua.jpg
+- name: store-on-corner-oldcabin-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-alien-goggles.jpg
+- name: old-granary-field-oldhouse-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-yellow-paper.jpg
+- name: window-window-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dali-two.jpg
+- name: mosaic-face-mosaic-face-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purp-paper.jpg
 ---
 Iran Officially Surpasses The Nuclear Deal's Enriched Uranium Limit.&nbsp;Man Allegedly Stabbed With Ice Pick At McAllen Bar.&nbsp;Outdoorsman Expresses Concern For Floaters On Spring Creek.&nbsp;Bethany Village Board Approves Liquor Changes.&nbsp;Kemba Walker Explained Why He Chose The Celtics In Free Agency.&nbsp;Amid Sex Abuse Scandals, Vatican Upholds Confession Secrecy.&nbsp;Shop At The Airport Duty Free? You May Be Supporting Israeli Settlements In Palestine.&nbsp;1,000 Flags Planted To Honor, Remember, All Veterans, Military And First Responders.&nbsp;
